# simp

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: agent.rs  diagnostic.rs  format.rs  main.rs  runner.rs
src/profiles/: biome.rs  eslint.rs  list_different.rs  mod.rs  oxfmt.rs  prettier.rs  tsc.rs
